Update page title for INFEST 2K25 event

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./src/assets/Info_logo.jpeg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Infestk24 - National Level Technical Symposium</title>
+    <title>INFEST 2K25 - National Level Technical Symposium</title>
   </head>
   <body>
     <div id="root"></div>
